# mobindi

./: .gitignore  .gitmodules  .travis.yml  AccessPath.test.ts  AccessPath.ts  Algebra.ts  Astrometry.ts  Camera.js  Camera.ts  CancelablePromise.js  Client.js  Client.ts  ClientRequest.ts  ConfigStore.js  ConfigStore.ts  FilterWheel.ts  Focuser.js  Focuser.ts  FocuserDelta.ts  GuideStats.ts  IdGenerator.js  IdGenerator.test.ts  IdGenerator.ts  ImageProcessor.js  ImageProcessor.ts  ImagingSetupManager.ts  Indi.js  Indi.test.js  Indi.test.ts  Indi.ts  IndiAutoConnect.js  IndiAutoConnect.ts  IndiAutoGphotoSensorSize.js  IndiAutoGphotoSensorSize.ts  IndiManager.js  IndiManager.ts  IndiMessageQueue.ts  IndiProfileManager.ts  IndiServer.js  IndiServerStarter.js  (+65 more)
SkyAlgorithms/: PlaneFinder.test.ts  PlaneFinder.ts  SkyProjection.test.ts  SkyProjection.ts
docs/: Bluetooth-serial.md
fitsviewer/: .gitignore  Astrometry.cpp  Astrometry.h  BitMask.cpp  BitMask.h  CMakeLists.txt  CacheFileDesc.cpp  ChannelMode.cpp  ChannelMode.h  ChildProcess.cpp  ChildProcess.h  FitsFile.cpp  FitsFile.h  FitsRenderer.cpp  FitsRenderer.h  FitsRendererBayer.cpp  FitsRendererGreyscale.cpp  FixedSizeBitSet.cpp  FixedSizeBitSet.h  Histogram.cpp  HistogramStorage.h  LookupTable.cpp  LookupTable.h  Messages.cpp  MultiStarFinder.cpp  MultiStarFinder.h  RawContent.cpp  RawDataStorage.h  SharedCache.cpp  SharedCache.h  SharedCacheServer.cpp  SharedCacheServer.h  SharedCacheServerClient.h  StarField.cpp  StarFinder.cpp  StarFinder.h  Stream.cpp  Stream.h  TempDir.cpp  TempDir.h  (+7 more)
fitsviewer/cmake/modules/: FindCGICC.cmake
fitsviewer/test/: BitMask_test.cpp  ChildPtr_test.cpp  FWHM_test.cpp  FitsRenderer_test.cpp  FixedSizeBitSet_test.cpp  Histogram_test.cpp  StarFinder_test.cpp  catch.hpp  smallstar.h
nginx/: .gitignore  cert.sh  install.sh  nginx.conf  nginx.sh
shared/: AccessPath.ts  BackOfficeAPI.ts  BackOfficeStatus.ts  Comparator.ts  FineSlewLogic.ts  IndiTypes.ts  Json.ts  JsonProxy.ts  Obj.ts  ProcessorTypes.ts  SequenceLogic.test.ts  SequenceLogic.ts  SequenceLogicDithering.test.ts  SequenceParamClassifier.test.ts  SequenceParamClassifier.ts
testdata/: heq5-init.devicetree.json  heq5-init.indi.json
tests/: Indi.test.js  JsonProxy.test.js  JsonProxySynchronizers.test.js  Promises.test.js  global.js  heq5-init.devicetree.json
ui/: package-lock.json  package.json  package.json~  tsconfig.json  tsconfig.test.json  tslint.json
ui/config/: webpack.config.dev.js  webpack.config.js  webpack.config.prod.js
ui/config/jest/: babelTransform.js
ui/public/: about.html  index.html  manifest.json
ui/src/: Actions.ts  ActionsRegistry.ts  App.css  App.js  App.test.tsx  App.tsx  AppIcon.css  AppIcon.js  AppIcon.tsx  AppStore.ts  AstrometryApp.tsx  AstrometryBackendAccessor.ts  AstrometryImageInfo.css  AstrometryImageInfo.tsx  AstrometrySettingsView.tsx  AstrometryStatusView.tsx  AstrometryStore.ts  AstrometryView.css  AstrometryView.tsx  AstrometryWizardBaseView.tsx  AstrometryWizards.css  AudioAlerts.ts  BackendRequest.ts  BackendStore.ts  BaseApp.js  BaseApp.ts  CameraApp.js  CameraApp.tsx  CameraBinEditor.js  CameraBinEditor.tsx  CameraDeviceSettingBackendAccessor.ts  CameraExpEditor.js  CameraExpEditor.tsx  CameraFrameTypeEditor.js  CameraFrameTypeEditor.tsx  CameraIsoEditor.js  CameraIsoEditor.tsx  CameraSelector.tsx  CameraSettingsPanel.tsx  CameraSettingsView.js  (+159 more)
ui/src/BackgroundWorker/: Worker.ts
ui/src/FitsViewer/: ContextMenu.tsx  ContextMenuContext.tsx  ContextMenuCross.tsx  ContextMenuDisplayer.tsx  ContextMenuItem.tsx  Crosshair.tsx  FWHMDisplayer.tsx  FitsMarker.tsx  FitsViewer.css  FitsViewer.tsx  Histogram.tsx  ImageDisplay.ts  ImageInfoQuery.ts  ImageLoader.ts  ImageUtils.ts  LevelBar.tsx  Types.ts
ui/src/Planetarium/: ContextMenu.tsx  Sky.tsx
ui/src/Sequence/: CameraSelector.tsx  DitheringSettingEdit.css  DitheringSettingEdit.tsx  ImageDetail.tsx  KeepValue.tsx  SequenceActivityMonitoringView.tsx  SequenceBackgroundMonitoringView.tsx  SequenceControler.tsx  SequenceEditDialog.tsx  SequenceFwhmMonitoringView.tsx  SequenceMonitoringDialog.tsx  SequenceSelector.tsx  SequenceStatMonitoringDialog.css  SequenceStatMonitoringDialog.tsx  SequenceStatMonitoringView.css  SequenceStatMonitoringView.tsx  SequenceStateMonitoringClassControl.css  SequenceStateMonitoringClassControl.test.ts  SequenceStateMonitoringClassControl.tsx  SequenceStepEdit.css  SequenceStepEdit.tsx  SequenceStepParameter.ts  SequenceStepParameterSplitter.tsx  SequenceView.css  SequenceView.tsx  SequenceWarning.tsx  StatusLabel.css  StatusLabel.tsx
ui/src/SkyAlgorithms/: PlaneFinder.ts  SkyProjection.ts
ui/src/Wizard/: BaseView.css  BaseView.tsx  ImageControl.tsx
ui/src/indiview/: DeviceIdMapper.ts  ImagingSetupDeviceMapper.ts  IndiDriverControlPanel.tsx  IndiDriverSelector.tsx  IndiManagerView.css  IndiManagerView.js  IndiManagerView.tsx  IndiProfileAttributes.tsx  IndiProfileDialog.tsx  IndiProfileEditDialog.tsx  IndiProfileGlobalStatus.tsx  IndiProfileNewDialog.tsx  IndiProfileSelector.tsx  IndiPropertyIdentifierList.tsx  IndiPropertyIdentifierSelector.tsx  IndiPropertyProfileDialog.tsx  IndiPropertyProfileStatus.tsx  IndiPropertyView.tsx  IndiSelectorPropertyView.tsx  IndiVectorView.tsx
ui/src/primitives/: AccessorSelector.tsx  BaseText.tsx  Bool.tsx  Conditional.tsx  Float.tsx  Int.tsx  ProgressMeter.tsx  QuickBton.css  QuickBton.tsx  Text.tsx  ToggleBton.css  ToggleBton.tsx
ui/src/shared/: AccessPath.test.ts  AccessPath.ts  Algebra.ts  Comparator.ts  FineSlewLogic.ts  FocuserDelta.ts  GuideStats.ts  JsonPath.js  JsonPath.ts  JsonProxy.js  JsonProxy.ts  Log.ts  Obj.js  Obj.ts  Promises.js  Promises.ts  SequenceLogic.ts  SequenceParamClassifier.ts  SimplePath.js
ui/src/table/: Table.css  Table.tsx  TableEntry.tsx
ui/src/utils/: AccessPath.ts  Accessor.test.ts  Accessor.ts  ArrayReselect.test.ts  ArrayReselect.ts  BackendAccessor.js  BackendAccessor.ts  ChartJSZoomPlugin.ts  Connect.ts  DegreeDistanceDisplay.test.ts  DegreeDistanceDisplay.ts  ObjectReselect.test.ts  SkyProjection.ts  (+3 more)
ui/typings/: workers.d.ts
(+15 files in other folders)
